--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,44 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>コメント件数：<%= @book.book_comments.count %></td>
             <% if @user==current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
         </tr>
       </table>
+
+
+
+      <table>
+          <tr>
+          <% @book.book_comments.each do |book_comment| %>
+          <td>
+            <%= image_tag book_comment.user.get_profile_image, size:"100x100" %>
+            <%= link_to user_path(book_comment.user.id) do %>
+            <br><%= book_comment.user.name %>
+            <% end %>
+          </td>
+          <td><%= book_comment.comment %></td>
+          <td><% if book_comment.user == current_user %>
+                <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete , data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+              <% end %>
+          </td>
+          </tr>
+          <% end %>
+      </table>
+
+
+
+
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment%><br>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 </div>
