[応用課題4完了]

--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -1,3 +1,8 @@
+<h2>follower users</h2>
+
+
+<% if ! @users.empty? %>
+
 <table class='table'>
   <thead>
     <tr>
@@ -7,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    <% users.each do |user| %>
+    <% @users.each do |user| %>
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
@@ -32,3 +37,6 @@
     <% end %>
   </tbody>
 </table>
+<% else %>
+  ユーザーはいません
+<% end %>
